// Vitest Snapshot v1

exports[`story snapshots > Error 1`] = `
"<li class=\\"list-group-item\\">
  <div class=\\"row align-items-center\\">
    <!--v-if-->
    <div class=\\"col col-auto\\"><i class=\\"bi fs-3 text-error bi-square-fill\\" data-v-3b64800a=\\"\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Error\\" aria-label=\\"Error\\"></i>
      <!--v-if-->
    </div>
    <div class=\\"col text-start lh-1\\">
      <div class=\\"row\\">
        <div class=\\"col\\"><small>Errored Job
            <!--v-if--><span class=\\"ms-3\\"><!--v-if--></span>
            <!--v-if-->
          </small></div>
      </div>
      <div class=\\"row\\">
        <div class=\\"col\\"><small class=\\"text-muted\\">Last Run: Never</small></div>
      </div>
    </div>
    <div class=\\"col col-auto\\" style=\\"display: none;\\"><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Config\\" aria-label=\\"View Config\\"><!--v-if--></span><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Logs\\" aria-label=\\"View Logs\\"><button class=\\"btn btn-outline-info me-1\\" data-bs-toggle=\\"modal\\" data-bs-target=\\"#logs-modal-Errored Job\\"><i class=\\"bi bi-terminal-fill\\"></i></button></span>
      <!--v-if-->
      <!--v-if--><button class=\\"btn btn-outline-success me-1\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Start\\" aria-label=\\"Start\\"><i class=\\"bi bi-play-fill\\"></i></button><button class=\\"btn btn-outline-warning me-1\\" disabled=\\"\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Restart\\" aria-label=\\"Restart\\"><i class=\\"bi bi-arrow-clockwise\\"></i></button>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</li>"
`;

exports[`story snapshots > Running 1`] = `
"<li class=\\"list-group-item\\">
  <div class=\\"row align-items-center\\">
    <!--v-if-->
    <div class=\\"col col-auto\\"><i class=\\"bi fs-3 text-active bi-square-fill\\" data-v-3b64800a=\\"\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Active\\" aria-label=\\"Active\\"></i>
      <!--v-if-->
    </div>
    <div class=\\"col text-start lh-1\\">
      <div class=\\"row\\">
        <div class=\\"col\\"><small>Running Job
            <!--v-if--><span class=\\"ms-3\\"><!--v-if--></span>
            <!--v-if-->
          </small></div>
      </div>
      <div class=\\"row\\">
        <div class=\\"col\\"><small class=\\"text-muted\\">Last Run: 4 months ago</small></div>
      </div>
    </div>
    <div class=\\"col col-auto\\" style=\\"display: none;\\"><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Config\\" aria-label=\\"View Config\\"><!--v-if--></span><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Logs\\" aria-label=\\"View Logs\\"><button class=\\"btn btn-outline-info me-1\\" data-bs-toggle=\\"modal\\" data-bs-target=\\"#logs-modal-Running Job\\"><i class=\\"bi bi-terminal-fill\\"></i></button></span>
      <!--v-if--><button class=\\"btn btn-outline-danger me-1\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Stop\\" aria-label=\\"Stop\\"><i class=\\"bi bi-stop-fill\\"></i></button>
      <!--v-if--><button class=\\"btn btn-outline-warning me-1\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Restart\\" aria-label=\\"Restart\\"><i class=\\"bi bi-arrow-clockwise\\"></i></button>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</li>"
`;

exports[`story snapshots > Stopped 1`] = `
"<li class=\\"list-group-item\\">
  <div class=\\"row align-items-center\\">
    <!--v-if-->
    <div class=\\"col col-auto\\"><i class=\\"bi fs-3 text-done bi-square-fill\\" data-v-3b64800a=\\"\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Done\\" aria-label=\\"Done\\"></i>
      <!--v-if-->
    </div>
    <div class=\\"col text-start lh-1\\">
      <div class=\\"row\\">
        <div class=\\"col\\"><small>Stopped Job
            <!--v-if--><span class=\\"ms-3\\"><!--v-if--></span>
            <!--v-if-->
          </small></div>
      </div>
      <div class=\\"row\\">
        <div class=\\"col\\"><small class=\\"text-muted\\">Last Run: 4 months ago</small></div>
      </div>
    </div>
    <div class=\\"col col-auto\\" style=\\"display: none;\\"><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Config\\" aria-label=\\"View Config\\"><!--v-if--></span><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Logs\\" aria-label=\\"View Logs\\"><button class=\\"btn btn-outline-info me-1\\" data-bs-toggle=\\"modal\\" data-bs-target=\\"#logs-modal-Stopped Job\\"><i class=\\"bi bi-terminal-fill\\"></i></button></span>
      <!--v-if-->
      <!--v-if--><button class=\\"btn btn-outline-success me-1\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Start\\" aria-label=\\"Start\\"><i class=\\"bi bi-play-fill\\"></i></button><button class=\\"btn btn-outline-warning me-1\\" disabled=\\"\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Restart\\" aria-label=\\"Restart\\"><i class=\\"bi bi-arrow-clockwise\\"></i></button>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</li>"
`;

exports[`story snapshots > Waiting 1`] = `
"<li class=\\"list-group-item\\">
  <div class=\\"row align-items-center\\">
    <!--v-if-->
    <div class=\\"col col-auto\\"><i class=\\"bi fs-3 text-waiting bi-square-fill\\" data-v-3b64800a=\\"\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Waiting\\" aria-label=\\"Waiting\\"></i>
      <!--v-if-->
    </div>
    <div class=\\"col text-start lh-1\\">
      <div class=\\"row\\">
        <div class=\\"col\\"><small>Waiting Job
            <!--v-if--><span class=\\"ms-3\\"><!--v-if--></span>
            <!--v-if-->
          </small></div>
      </div>
      <div class=\\"row\\">
        <div class=\\"col\\"><small class=\\"text-muted\\">Last Run: 4 months ago</small></div>
      </div>
    </div>
    <div class=\\"col col-auto\\" style=\\"display: none;\\"><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Config\\" aria-label=\\"View Config\\"><!--v-if--></span><span data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"View Logs\\" aria-label=\\"View Logs\\"><button class=\\"btn btn-outline-info me-1\\" data-bs-toggle=\\"modal\\" data-bs-target=\\"#logs-modal-Waiting Job\\"><i class=\\"bi bi-terminal-fill\\"></i></button></span>
      <!--v-if--><button class=\\"btn btn-outline-danger me-1\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Stop\\" aria-label=\\"Stop\\"><i class=\\"bi bi-stop-fill\\"></i></button>
      <!--v-if--><button class=\\"btn btn-outline-warning me-1\\" data-bs-toggle=\\"tooltip\\" data-bs-placement=\\"bottom\\" title=\\"\\" data-bs-original-title=\\"Restart\\" aria-label=\\"Restart\\"><i class=\\"bi bi-arrow-clockwise\\"></i></button>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</li>"
`;
